stateDiagram-v2
    direction TB

    [*] --> PendingScoring

    state "pending_scoring" as PendingScoring
    state "low_score" as LowScore
    state "anomaly_empty" as AnomalyEmpty
    state "anomaly_summary_unpublished" as AnomalySummaryUnpublished
    state "archived" as Archived
    state "incubating_maturity_sources" as IncubatingBoth
    state "incubating_maturity" as IncubatingMaturity
    state "incubating_sources" as IncubatingSources
    state "eligible_rewriting" as EligibleRewriting
    state "published" as Published

    PendingScoring --> LowScore: final_score < minScore
    PendingScoring --> AnomalyEmpty: score OK + article_count = 0
    PendingScoring --> AnomalySummaryUnpublished: score OK + has_summary
    PendingScoring --> Archived: score OK + freshOnly + !has_fresh_article
    PendingScoring --> IncubatingBoth: score OK + !mature + sources < minSources
    PendingScoring --> IncubatingMaturity: score OK + !mature + sources >= minSources
    PendingScoring --> IncubatingSources: score OK + mature + sources < minSources
    PendingScoring --> EligibleRewriting: score OK + mature + sources >= minSources + fresh

    IncubatingBoth --> IncubatingMaturity: sources >= minSources
    IncubatingBoth --> IncubatingSources: mature
    IncubatingMaturity --> EligibleRewriting: mature
    IncubatingSources --> EligibleRewriting: sources >= minSources

    IncubatingBoth --> Archived: freshness expirée
    IncubatingMaturity --> Archived: freshness expirée
    IncubatingSources --> Archived: freshness expirée
    EligibleRewriting --> Archived: freshness expirée

    EligibleRewriting --> Published: rewrite + summary OK + is_published=true

    LowScore --> [*]
    AnomalyEmpty --> [*]
    AnomalySummaryUnpublished --> [*]
    Archived --> [*]
    Published --> [*]
